cabal-version: 3.0
name: rhine-morpheus
version: 0.1.0
synopsis: Morpheus frontend for Rhine
homepage: https://github.com/ners/rhine-web
license: Apache-2.0
license-file: LICENCE.md
author: ners
maintainer: ners@gmx.ch
bug-reports: https://github.com/ners/rhine-web/issues
category: System
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ners/rhine-web

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-all-missed-specialisations

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DerivingStrategies
    FlexibleInstances
    ImportQualifiedPost
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    base >=4 && <5,
    rhine,
    morpheus-graphql,

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    FRP.Rhine.Morpheus

  build-depends:
    monad-schedule,
    time,

test-suite test
  import: common
  ghc-options: -threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    hspec,
    rhine-morpheus,
